test/compile-fail/resolution/type-existence/ambiguous-trait/top.rhdl
struct a<T: b> {}
trait b {}
trait b {}
